# Hello-Stock

./: .env.example  .gitignore  AGENTS.md  LICENSE  MARKET_RESEARCH_REFACTOR_PLAN.md  README.md  REFACTOR_DESIGN.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/agents/: coding-style.md  commit-pr-guidelines.md  development-commands.md  project-structure.md  security-configuration.md  testing-guidelines.md
docs/market-research/: evaluation.md  index.md
docs/refactor/: alerting.md  behavior-changes.md  main-modules.md  memory-consolidation.md  overview.md  runtime-flow.md  runtime-observability.md  runtime-query-surface.md  state-contract.md  validation.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_scheduler_recap_sources.py  0003_runtime_observability.py  0004_memory_pipeline.py  0005_market_research_signals.py  0006_market_research_only_cleanup.py
reports/eval/: market_research_eval_20260519T034715Z.jsonl  market_research_eval_20260519T034715Z.md
src/news_agent/: __init__.py  main.py  settings.py
tests/: test_chat_graph.py  test_dedupe.py  test_guardrails.py  test_indicators.py  test_ingest_providers.py  test_intent.py  test_market_impact.py  test_memory_consolidation.py  test_react.py  test_reflection.py  test_research_extraction.py  test_research_planner.py  test_research_reporting.py  test_research_scoring.py  test_router.py  test_runtime_subagent.py  test_scheduler_graph.py  test_scheduler_normalize.py  test_scheduler_service.py  test_search_service.py  test_short_term.py  test_summarizer.py  test_tools.py  test_yahoo.py
(+59 files in other folders)
